hlsdemux: reset end_of_playlist attribute when we receive a seek

https://bugzilla.gnome.org/show_bug.cgi?id=738696